--- a/css/style_new.css
+++ b/css/style_new.css
@@ -1,4 +1,8 @@
-div, label, div, input, button {
+div,
+label,
+div,
+input,
+button {
     font-family: 'Poppins', sans-serif !important;
     color: #0F1C3A;
 }
@@ -14,20 +18,16 @@ div, label, div, input, button {
     body {
         text-align: center !important;
     }
-
     h1 {
         margin-top: 0 !important;
         font-size: 2.8em !important;
     }
-
     h2 {
         font-size: 1.4em !important;
     }
-
     #avatar {
         padding-bottom: 4px !important;
     }
-
     #text {
         padding-top: 4px !important;
     }
@@ -36,9 +36,9 @@ div, label, div, input, button {
 h1 {
     font-family: Poppins;
     font-size: 30px;
-  font-weight: 800;
-  line-height: 2.33;
-  color: #161d2c;
+    font-weight: 800;
+    line-height: 2.33;
+    color: #161d2c;
 }
 
 .button {
@@ -73,8 +73,9 @@ p {
 
 #footer {
     /* height: 100px; */
-  background-color: #161d2c;
+    background-color: #161d2c;
 }
+
 
 /* .footer {
     margin-top: 19px !important;
@@ -83,3 +84,53 @@ p {
 .button {
     background-color: rgba(0, 0, 0, 0) !important;
 }
+
+#copyright {
+    height: 20px;
+    font-family: Poppins;
+    font-size: 14px !important;
+    font-weight: bold;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: normal;
+    letter-spacing: normal;
+    color: #ffffff;
+}
+
+.work {
+    opacity: 0.4 !important;
+    border-radius: 16px;
+    background-color: #edf2f9 !important;
+    border: 0 !important;
+    /* height: 350px; */
+}
+
+
+/* .banner {
+    top: 0;
+    left: 0;
+    width: 56.2%;
+    height: 100px;
+    margin: 24px !important;
+    opacity: 0.4;
+    border-radius: 16px;
+    background-color: #edf2f9;
+    /* display: inline;
+    background-color: rosybrown;
+} */
+
+.horizontal.separator {
+    width: 100%;
+    height: 64px;
+    /* background-color: rosybrown; */
+}
+
+
+/* .work_text {
+    background-color: royalblue;
+} */
+
+
+/* .work_image {
+    opacity: 100% !important;
+} */
