--- a/css/home.css
+++ b/css/home.css
@@ -34,29 +34,48 @@ header > div {
     background-color: rgba(237,242,249, 0.4);
     border-radius: 16px;
 }
+.work-sample img {
+    max-width: 100%;
+}
+
+
+.work-sample .image-box {
+    position: relative;
+}
+
+.work-sample .hidden img{
+    visibility: hidden;
+    margin-right: 30px;
+    vertical-align: middle;
+
+}
 
 .work-sample .link {
     padding: 24px 24px 24px 24px;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
-    justify-content: center;
 }
 
-.work-sample img {
-    margin-right: 30px;
-    max-width: 100%;
+.work-sample .image-box > img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    animation-iteration-count: infinite;
 }
 
-.work-sample img:last-of-type {
-    display: none;
+.work-sample img.image-colored {
+    visibility: hidden;
+    animation: .3s fadeOut;
 }
-.work-sample:hover img:last-of-type {
-    display: block;
+.work-sample:hover img.image-colored  {
+    visibility: visible;
+    animation: .3s fadeIn;
 }
-.work-sample:hover img:first-of-type {
-    display: none;
+.work-sample:hover img.image-gray  {
+    animation: .3s fadeOut;
 }
+
 
 
 .work-sample h2 {
@@ -94,7 +113,7 @@ header > div {
 }
 
 .work-sample .arrow div{
-    transition: all ease-out 0.2s;
+    transition: all ease 0.2s;
 }
 
 .work-sample:hover .arrow div:first-child{
@@ -104,7 +123,25 @@ header > div {
     transform: rotate(45deg) translateY(-2px);
 }
 
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        visibility: visible;
+        opacity: 1;
+    }
+}
 
+@keyframes fadeOut {
+    0% {
+        opacity: 1;
+        visibility: visible;
+    }
+    100% {
+        opacity: 0;
+    }
+}
 
 @media only screen and (min-width: 945px) {
     .sample-title {
