--- a/css/works.css
+++ b/css/works.css
@@ -49,11 +49,13 @@ nav {
     position: absolute;
     top: 0;
     display: block;
+    margin-top: 100px;
     max-width: 100%;
     background-color: #e6f3e2;
 }
 
 .mobile-header-hidden {
+    padding-top: 100px;
     max-width: 100%;
     visibility: hidden;
     display: block;
@@ -207,6 +209,7 @@ nav {
 }
 main img {
     max-width: 100%;
+    max-height: 100%;
 }
 
 .work-image-normal{
