fixed link to home

--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,9 @@ nav img {
     margin-left: 32px;
     max-height: 32px;
     animation-fill-mode: forwards;
+}
+
+#tannaz-nav {
     visibility: hidden;
 }
 
