--- a/css/home.css
+++ b/css/home.css
@@ -38,16 +38,15 @@ header > div {
     max-width: 100%;
 }
 
-
 .work-sample .image-box {
     position: relative;
 }
 
-.work-sample .hidden img{
+.work-sample .hidden img {
     visibility: hidden;
     margin-right: 30px;
     vertical-align: middle;
-
+    /* max-width: 531px; */
 }
 
 .work-sample .link {
@@ -62,6 +61,8 @@ header > div {
     top: 0;
     left: 0;
     animation-iteration-count: infinite;
+    /* max-width: 531px;
+    margin-right: 30px; */
 }
 
 .work-sample img.image-colored {
@@ -75,8 +76,6 @@ header > div {
 .work-sample:hover img.image-gray  {
     animation: .3s fadeOut;
 }
-
-
 
 .work-sample h2 {
     font-size: 20px;
@@ -147,14 +146,17 @@ header > div {
     .sample-title {
         margin-top: 0;
     }
+
     header {
         justify-content: flex-start;
         margin: 0;
     }
+
     .work-sample {
         justify-content: flex-start;
         margin: 32px 0 0 0;
     }
+
     .work-sample h2 {
         margin-top: 0
     }
@@ -162,6 +164,12 @@ header > div {
     .tannaz-image {
         margin-right: 36px;
     }
+
+    .work-sample .hidden img {
+        max-width: 531px;
+    }
+    
+    .work-sample .image-box > img {
+        max-width: 531px;
+    }
 }
-
-
