--- a/css/works.css
+++ b/css/works.css
@@ -183,7 +183,8 @@ nav {
 .work-article-back {
     width: 100%;
     height: 291px;
-    background: url('../assets/change-dest/map.png') no-repeat center;
+    background: url('../assets/change-dest/map.png') no-repeat left;
+    background-size: cover;
 }
 
 .work-article ul {
@@ -394,6 +395,7 @@ footer {
         max-width: 905px;
         background: url('../assets/change-dest/pic.png') no-repeat;
         height: 682px;
+        background-size: contain;
     }
 
     .mobile-header {
@@ -426,6 +428,16 @@ footer {
 
     .chat .work-image img {
         max-width: 600px;
+    }
+
+    .change-dest .work-image img {
+        max-width: 600px;
+    }
+
+    .change-dest .work-image-normal img {
+        max-width: 100%;
+        padding-left: 48px;
+        padding-right: 48px;
     }
 
     #problem {
