--- a/css/works.css
+++ b/css/works.css
@@ -183,9 +183,9 @@ nav {
     margin-top: 24px;
 }
 
-.work-article-back {
+#change-dest-intro {
     width: 100%;
-    height: 291px;
+    /* height: 291px; */
     background: url('../assets/change-dest/map.png') no-repeat left;
     background-size: cover;
 }
