--- a/css/works.css
+++ b/css/works.css
@@ -183,11 +183,12 @@ nav {
     margin-top: 24px;
 }
 
-#change-dest-intro {
+.work-article-back {
     width: 100%;
-    /* height: 291px; */
+    /* height: 100%; */
     background: url('../assets/change-dest/map.png') no-repeat left;
-    background-size: cover;
+    background-size: contain;
+    background-position: bottom;
 }
 
 .work-article ul {
@@ -294,6 +295,10 @@ main img {
 
 .padding-bottom-64 {
     padding-bottom: 64px;
+}
+
+.padding-bottom-150 {
+    padding-bottom: 150px;
 }
 
 .pagination {
