--- a/css/works.css
+++ b/css/works.css
@@ -13,7 +13,7 @@ nav {
     visibility: visible;
 }
 
-.vouchers .work-header img {
+.beat .work-header img {
     display: block;
     max-width: 100%;
 }
@@ -62,7 +62,7 @@ nav {
     clear: left;
 }
 
-.vouchers .work-header {
+.beat .work-header {
     background-image: none;
 }
 
@@ -79,7 +79,7 @@ nav {
     background-color: #e6f3e2;
 }
 
-.vouchers .work-container {
+.beat .work-container {
     background-color: #d5eedc;
 }
 
@@ -129,7 +129,7 @@ nav {
     min-height: 100px;
 }
 
-.vouchers .work-article .work-text {
+.beat .work-article .work-text {
     min-height: initial;
     padding-bottom: 12px;
 }
@@ -467,7 +467,7 @@ footer {
     .mobile-header {
         display: none;
     }
-    .vouchers .work-header img {
+    .beat .work-header img {
         display: block;
         max-width: 990px;
         margin: 38px auto 0 auto;
@@ -484,11 +484,11 @@ footer {
         margin: 40px auto 0 auto;
     }
 
-    .vouchers .work-image-normal img {
+    .beat .work-image-normal img {
         height: 600px;
     }
     
-    .vouchers .work-image img {
+    .beat .work-image img {
         height: 600px;
     }
 
