--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,17 @@ body {
     font-family: 'Poppins', sans-serif;
     font-size: 14px;
     color: #161d2c;
+
+    position: relative;
+    min-height: 100vh;
+    flex-direction:column;
 }
+
+body::after {
+    content: '';
+    display: block;
+    height: 100px;
+  }
 
 .menu .active a{
     color: #161d2c;
@@ -91,6 +101,9 @@ footer {
     display: flex;
     padding-right: 16px;
     padding-left: 16px;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
 }
 
 .footer-content {
