--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ html {
 
 body {
     font-family: 'Poppins', sans-serif;
-    font-size: 14px;
+    font-size: 16px;
     color: #161d2c;
 
     position: relative;
@@ -92,6 +92,7 @@ nav img {
 
 .main {
     margin-top: 32px;
+    margin-bottom: 32px;
 }
 
 footer {
